@@ -1,6 +1,7 @@
 April 8, 2009 | GnuTTSServer v0.1.1
 
 * Added intonation support when speaking a text string (dbrisinda)
+* Added GNU header and copyright information to source files (dbrisinda)
 
 January 23, 2009 | GnuTTSServer v0.1
 
